# lit-extractor

./: .env.example  .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
config/: default.toml
migrations/: 0001_init.sql  0002_indexes.sql
schemas/: brief.schema.json  evidence_ledger.schema.json  figures_index.schema.json
scripts/: smoke_run.ps1
src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  types.rs
src/brief/: compose.rs  fig_integration.rs  mod.rs  rank.rs  render_md.rs  render_pdf.rs  validate.rs
src/cache/: http_cache.rs  mod.rs
src/connectors/: clinicaltrials.rs  crossref.rs  epmc.rs  mod.rs  openalex.rs  pubmed.rs  unpaywall.rs
src/db/: docs_repo.rs  mod.rs  schema.rs
src/domain/: doc.rs  evidence.rs  figure.rs  mod.rs
src/extract/: anchor.rs  claim_candidate.rs  claim_verify.rs  figures_jats.rs  figures_pdf.rs  mod.rs  numbers.rs  pdf_text.rs  xml_text.rs
src/fs/: atomic.rs  hash.rs  layout.rs  mod.rs
src/net/: mod.rs  ratelimit.rs  retry.rs
src/pipeline/: app.rs  download_oa.rs  extract.rs  ingest_local.rs  io.rs  metadata.rs  mod.rs  qa.rs  run.rs  search.rs  synthesis.rs
tests/: brief_validator.rs  dedupe_correctness.rs  figure_validator.rs  schema_validation.rs
