[package]
name = "lit"
version = "0.1.0"
edition = "2024"

[features]
default = []
llm = []
pdf-render = []

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"
governor = "0.7"
jsonschema = "0.18"
lopdf = "0.35"
once_cell = "1.20"
printpdf = "0.7"
quick-xml = { version = "0.38", features = ["serialize"] }
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
roxmltree = "0.20"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
urlencoding = "2.1"
uuid = { version = "1.12", features = ["v4", "serde"] }
walkdir = "2.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
rstest = "0.24"
tempfile = "3.15"
wiremock = "0.6"
